--- a/Android Application/app/build.gradle
+++ b/Android Application/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 }
