--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -13,12 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MeriZameen">
-        <activity android:name=".Home"></activity>
-        <activity android:name=".ImageAnalysis">
-
-        </activity>
+        android:theme="@style/Theme.MeriZameen"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ReportGeneration"></activity>
+        <activity android:name=".Home" />
+        <activity android:name=".ImageAnalysis"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
