Login and signup functionality is added

--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -14,10 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeriZameen"
+        android:windowSoftInputMode="adjustPan|adjustResize"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ReportGeneration"></activity>
+        <activity android:name=".SensorDashboard"></activity>
+        <activity android:name=".Signup" />
+        <activity android:name=".Login" />
+
+        <activity android:name=".ReportGeneration" />
         <activity android:name=".Home" />
-        <activity android:name=".ImageAnalysis"></activity>
+        <activity android:name=".ImageAnalysis" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
