--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -14,16 +14,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeriZameen"
-        android:windowSoftInputMode="adjustPan|adjustResize"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".SensorDashboard"></activity>
-        <activity android:name=".Signup" />
-        <activity android:name=".Login" />
-
-        <activity android:name=".ReportGeneration" />
-        <activity android:name=".Home" />
-        <activity android:name=".ImageAnalysis" />
-        <activity android:name=".SplashActivity">
+        android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="adjustPan|adjustResize">
+        <activity android:name=".DisplaySavedSensorValues"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".SensorDashboard"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".Signup"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".Login"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".ReportGeneration"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".Home"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".ImageAnalysis"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".SplashActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +56,8 @@
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:theme="@style/Base.Theme.AppCompat">
+        </activity>
     </application>
 
 </manifest>
